fix stretched image in memoriam overlay

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -869,7 +869,7 @@ $ajax-load-size: 44px;
 	&__photo {
 		max-height: 60vh;
 		flex-grow: 0;
-		width: 100%;
+		max-width: 100%;
 		align-self: center;
 	}
 
